[build-system]
requires = ["scikit-build-core >=0.4.3", "numpy", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "antpack"
readme = "README.md"
version = "0.3.8.6"
authors = [
    {name = "Jonathan Parkinson", email = "jlparkinson1@gmail.com"},
]
description = "A Python package for processing, manipulating and making inferences about antibody sequence data"
requires-python = ">=3.8"
keywords = ["antibody", "antibodies", "antibody numbering", "antibody humanization",
           "antibody humanness", "antibody analysis"]
license = {file = "LICENSE"}
dependencies = [
    "numpy"
]


[project.scripts]
AntPack-CLI = "antpack:run_cli_interface"
AntPack-GUI = "antpack:run_seq_viewer"


[project.urls]
Homepage = "https://github.com/jlparkI/AntPack"
Documentation = "https://antpack.readthedocs.io/en/latest/index.html"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+.
# Cancelling this feature since it has led to incompatibility for
# Python 3.13.
#logging.level = "INFO"
#wheel.py-api = "cp312"
cmake.verbose = true
cmake.version = ">=3.18"

# IMPORTANT: If debugging, uncomment BOTH of the following lines.
# This build backend automatically strips unless install.strip is
# set to false, so that even if build-type is set to debug,
# the symbols will be stripped.
#cmake.build-type = "Debug"
#install.strip = false

cmake.build-type = "Release"
